Changes: Inital setup for FE, dependencies + components folder

--- a/love/index.html
+++ b/love/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.stoneycloverlane.com/cdn/shop/files/AM2_425784e3-36bd-4e2a-b93b-49fcd1960b92_grande.png?v=1705617190" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Letters to you</title>
   </head>
   <body>
     <div id="root"></div>
